--- a/large.css
+++ b/large.css
@@ -1,68 +1,82 @@
 .mdl-bigsnackbar {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  cursor: default;
-  background-color: #323232;
-  z-index: 3;
-  display: block;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  will-change: transform;
-  -webkit-transform: translate(0, 80px);
-          transform: translate(0, 80px);
-  transition: -webkit-transform 0.25s cubic-bezier(0.4, 0, 1, 1);
-  transition: transform 0.25s cubic-bezier(0.4, 0, 1, 1);
-  transition: transform 0.25s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.25s cubic-bezier(0.4, 0, 1, 1);
-  pointer-events: none; }
-  @media (max-width: 479px) {
+    height: fit-content;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    cursor: default;
+    background-color: #323232;
+    z-index: 3;
+    display: block;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    will-change: transform;
+    -webkit-transform: translate(0, 80px);
+    transform: translate(0, 80px);
+    transition: -webkit-transform 0.25s cubic-bezier(0.4, 0, 1, 1);
+    transition: transform 0.25s cubic-bezier(0.4, 0, 1, 1);
+    transition: transform 0.25s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.25s cubic-bezier(0.4, 0, 1, 1);
+    pointer-events: none;
+}
+
+@media (max-width: 600px) {
     .mdl-bigsnackbar {
-      width: 100%;
-      left: 0;
-      min-height: 48px;
-      max-height: 80px; } }
-  @media (min-width: 480px) {
+        width: 100% !important;
+        left: 0;
+        min-height: 48px;
+    }
+}
+
+@media (min-width: 600px) {
     .mdl-bigsnackbar {
-      min-width: 288px;
-      max-width: 568px;
-      border-radius: 2px;
-      -webkit-transform: translate(-50%, 80px);
-              transform: translate(-50%, 80px); } }
-  .mdl-bigsnackbar--active {
+        min-width: 550px;
+        max-width: fit-content;
+        border-radius: 2px;
+        -webkit-transform: translate(-50%, 80px);
+        transform: translate(-50%, 80px);
+    }
+}
+
+.mdl-bigsnackbar--active {
     -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
+    transform: translate(0, 0);
     pointer-events: auto;
     transition: -webkit-transform 0.25s cubic-bezier(0, 0, 0.2, 1);
     transition: transform 0.25s cubic-bezier(0, 0, 0.2, 1);
-    transition: transform 0.25s cubic-bezier(0, 0, 0.2, 1), -webkit-transform 0.25s cubic-bezier(0, 0, 0.2, 1); }
-    @media (min-width: 480px) {
-      .mdl-bigsnackbar--active {
+    transition: transform 0.25s cubic-bezier(0, 0, 0.2, 1), -webkit-transform 0.25s cubic-bezier(0, 0, 0.2, 1);
+}
+
+@media (min-width: 600px) {
+    .mdl-bigsnackbar--active {
         -webkit-transform: translate(-50%, 0);
-                transform: translate(-50%, 0); } }
-  .mdl-bigsnackbar__text {
+        transform: translate(-50%, 0);
+    }
+}
+
+.mdl-bigsnackbar__text {
     padding: 14px 12px 14px 24px;
     vertical-align: middle;
     color: white;
-    float: left; }
-  .mdl-bigsnackbar__action {
+    float: left;
+}
+
+.mdl-bigsnackbar__action {
     background: transparent;
     border: none;
-    color: rgb(255,64,129);
+    color: rgb(255, 64, 129);
     float: right;
     text-transform: uppercase;
-    padding: 14px 24px 14px 12px;
+    padding: 14px 10px 14px 10px;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 14px;
     font-weight: 500;
-    text-transform: uppercase;
     line-height: 1;
     letter-spacing: 0;
-    overflow: hidden;
+    overflow: visible;
     outline: none;
     opacity: 0;
     pointer-events: none;
@@ -70,11 +84,24 @@
     text-decoration: none;
     text-align: center;
     -webkit-align-self: center;
-        -ms-flex-item-align: center;
-                -ms-grid-row-align: center;
-            align-self: center; }
-    .mdl-bigsnackbar__action::-moz-focus-inner {
-      border: 0; }
-    .mdl-bigsnackbar__action:not([aria-hidden]) {
-      opacity: 1;
-      pointer-events: auto; }
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+}
+
+.mdl-bigsnackbar__action::-moz-focus-inner {
+    border: 0;
+}
+
+.mdl-bigsnackbar__action:not([aria-hidden]) {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.mdl-bigsnackbar__action--left {
+    padding: 14px 10px 14px 12px;
+}
+
+.mdl-bigsnackbar__action--right {
+    padding: 14px 24px 14px 10px;
+}
