--- a/large.css
+++ b/large.css
@@ -33,7 +33,7 @@
 
 @media (min-width: 600px) {
     .mdl-bigsnackbar {
-        min-width: 550px;
+        min-width: fit-content;
         max-width: fit-content;
         border-radius: 2px;
         -webkit-transform: translate(-50%, 80px);
